Bug 352307 - Compilation errors with Visual Studio 2013
Summary: Compilation errors with Visual Studio 2013
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.12 (KDE Applications 15.08)
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-05 13:58 UTC by torsten.pf
Modified: 2015-09-05 14:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description torsten.pf 2015-09-05 13:58:22 UTC
Two classes of libmarble need the MARBLE_EXPORT symbol to link the OSM plugin: OsmPlacemarkData and GeoTagWriter.

Solution:
1. replace "class OsmPlacemarkData" with "class MARBLE_EXPORT OsmPlacemarkData" (line 52)
2. replace "class GeoTagWriter" with "class MARBLE_EXPORT GeoTagWriter" (line 31)
3. add "#include "marble_export.h" " after line 16

Reproducible: Always
Comment 1 torsten.pf 2015-09-05 13:59:29 UTC
Sorry, forgot the file names in the solution steps:
1. OsmPlacemarkData.h
2. GeoTagWriter.h
3. GeoTagWriter.h
Comment 2 Dennis Nienhüser 2015-09-05 14:21:48 UTC
Git commit d9aa43e3a9deb7971963898cd589f5b53d38ff72 by Dennis Nienhüser.
Committed on 05/09/2015 at 14:21.
Pushed by nienhueser into branch 'Applications/15.08'.

Export classes used in plugins (MSVC)

(cherry picked from commit dd1f8733690a775aefec88b9a246da0c996b0d90)

M  +3    -1    src/lib/marble/geodata/writer/GeoTagWriter.h
M  +2    -1    src/lib/marble/osm/OsmPlacemarkData.h
M  +1    -0    src/lib/marble/routing/RouteRequest.cpp

http://commits.kde.org/marble/d9aa43e3a9deb7971963898cd589f5b53d38ff72