Export classes used in plugins (MSVC)

BUG: 352307

(cherry picked from commit dd1f8733690a775aefec88b9a246da0c996b0d90)